# flow

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  draw_trajectory_mavlink.py  extract_frames.py  naive_lucas_kanade.py  naive_optical_flow.py  naive_registration.py  optical_flow.py  read_data.py  realtime_local_position_plot.plt  realtime_optical_flow_plot.plt  realtime_optical_flow_px4flow_diff.plt  realtime_position_diff_plot.plt  realtime_velocity_diff_plot.plt  record_gstream.py
examples/cpp/: opencv_lk_optical_flow.cpp  opencv_lk_optical_flow_gstream.cpp  opencv_lk_pose_estimation.cpp
examples/cpp/include/: estimator.h
examples/cpp/include/utils/: DCOffsetFilter.h  MavlinkInterface.h
examples/notebooks/: Analysis.ipynb  OpticalFlow.ipynb  ReadAndAnalyseData.ipynb
notebooks/: ReadAndAnalyseData.ipynb
scripts/: CMakeLists.txt  read_data.py
scripts/cpp/: opencv_farneback_optical_flow.cpp  opencv_lk_dense_flow.cpp  opencv_lk_optical_flow_gstream.cpp  opencv_lk_pose_estimation.cpp
scripts/cpp/include/utils/: OpencvInterface.h
src/: CMakeLists.txt  Estimator.cpp  Estimator.h  main.cpp  params.h  signal.cpp
src/containers/: LifoQueue.h
src/lib/: CMakeLists.txt
src/modules/: CMakeLists.txt
src/modules/gcs/: CMakeLists.txt  GCSMavlink.cpp  GCSMavlink.h  UDPLink.cpp  UDPLink.h
src/modules/iostream/: IOStream.h
src/modules/opencv/: CMakeLists.txt  CvInterface.cpp  CvInterface.h  Interface.h
src/modules/vio/: flow.cpp  flow.h
src/utility/: signal.cpp
src/utils/: DCOffsetFilter.cpp  DCOffsetFilter.h  LPFilter.cpp  LPFilter.h
